--- a/config/locales/activerecord.pt-BR.yml
+++ b/config/locales/activerecord.pt-BR.yml
@@ -16,3 +16,8 @@ pt-BR:
                 email: E-mail
                 password: Senha
                 remember_me: Lembre-me
+
+            livro:
+                descricao: Descrição
+                created_at: Cadastrado em
+                updated_at: Atualizado em
